--- a/themes/butterfly/layout/includes/footer.pug
+++ b/themes/butterfly/layout/includes/footer.pug
@@ -6,27 +6,27 @@
           p.ft-t.t-l-t 格言🧬
           .bg-ad
             div
-              | 再看看那个光点，它就在这里，这是家园，这是我们 —— 你所爱的每一个人，你认识的一个人，你听说过的每一个人，曾经有过的每一个人，都在它上面度过他们的一生✨
+              | 是啊，你是小怪兽，可小怪兽也有小怪兽的好朋友，孤独的小怪兽们害怕得靠在一起，但如果正义的奥特曼要来杀你，我就帮你把正义的奥特曼杀死。
             .btn-xz-box
-              a.btn-xz(href='https://stellarium.org/') 点击开启星辰之旅
+              //- a.btn-xz(href='https://stellarium.org/') 点击开启星辰之旅
         .t-t-r
           p.ft-t.t-l-t 猜你想看💡
           ul.ft-links
             li
               a(href='/posts/eec9786.html') 魔改指南
               a(href='/box/nav/') 网址导航
-            li
-              a(href='/social/link/') 我的朋友
-              a(href='/comments/') 留点什么
+            //- li
+            //-   a(href='/social/link/') 我的朋友
+            //-   a(href='/comments/') 留点什么
             li
               a(href='/personal/about/') 关于作者
               a(href='/archives/') 文章归档
             li
               a(href='/categories/') 文章分类
               a(href='/tags/') 文章标签
-            li
-              a(href='/box/Gallery/') 我的画廊
-              a(href='/personal/bb/') 我的唠叨
+            //- li
+            //-   a(href='/box/Gallery/') 我的画廊
+            //-   a(href='/personal/bb/') 我的唠叨
             li
               a(href='/site/time/') 建设进程
               a(href='/site/census/') 网站统计
@@ -34,7 +34,7 @@
       p.ft-t 推荐友链⌛
       .ft-img-group
         .img-group-item
-          a(href='https://www.fomal.cc/' title='Fomalhaut🥝')
+          a(href='https://answerBoom.github.io' title='answer🐻')
             img(src='https://lskypro.acozycotage.net/LightPicture/2022/12/60e5d4e39da7c077.webp' alt='')
         .img-group-item
           a(href='javascript:void(0)' title='广告位招租')
@@ -92,8 +92,8 @@
     a.github-badge(target='_blank' href="https://butterfly.js.org/" style='margin-inline:5px' title="主题版本Butterfly_v4.3.1")
       img(src="https://sourcebucket.s3.ladydaily.com/badge/Theme-Butterfly-6513df.svg" alt='')
 
-    a.github-badge(target='_blank' href="https://vercel.com/" style='margin-inline:5px' title="本站采用多线部署，主线路托管于Vercel")
-      img(src="https://sourcebucket.s3.ladydaily.com/badge/Hosted-Vercel-brightgreen.svg" alt='')
+    //- a.github-badge(target='_blank' href="https://vercel.com/" style='margin-inline:5px' title="本站采用多线部署，主线路托管于Vercel")
+    //-   img(src="https://sourcebucket.s3.ladydaily.com/badge/Hosted-Vercel-brightgreen.svg" alt='')
 
     a.github-badge(target='_blank' href="https://user.51.la/" style='margin-inline:5px' title="本站数据分析得益于51la技术支持")
       img(src="https://sourcebucket.s3.ladydaily.com/badge/Analytics-51la-3db1eb.svg" alt='')
@@ -104,8 +104,8 @@
     a.github-badge(target='_blank' href="https://bitiful.dogecast.com/buckets" style='margin-inline:5px' title="本网站经Service Worker分流至缤纷云对象存储")
       img(src=" https://sourcebucket.s3.ladydaily.com/badge/Bucket-缤纷云-9c62da.svg" alt='')
 
-    a.github-badge(target='_blank' href="https://www.netdun.net/" style='margin-inline:5px' title="本站使用网盾星球提供CDN加速与防护")
-      img(src="https://sourcebucket.s3.ladydaily.com/badge/CDN-网盾星球-fff2cc.svg" alt='')
+    //- a.github-badge(target='_blank' href="https://www.netdun.net/" style='margin-inline:5px' title="本站使用网盾星球提供CDN加速与防护")
+    //-   img(src="https://sourcebucket.s3.ladydaily.com/badge/CDN-网盾星球-fff2cc.svg" alt='')
 
     a.github-badge(target='_blank' href="https://github.com/" style='margin-inline:5px' title="本网站源码由Github提供存储仓库")
       img(src=" https://sourcebucket.s3.ladydaily.com/badge/Source-Github-d021d6.svg" alt='')
